--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,8 @@
         <hutool.version>4.1.19</hutool.version>
         <guava.version>27.0-jre</guava.version>
         <commons-lang3.version>3.8.1</commons-lang3.version>
+        <poi.version>4.0.0</poi.version>
+        <xerces.version>2.12.0</xerces.version>
     </properties>
 
     <dependencyManagement>
@@ -66,6 +68,18 @@
                 <groupId>org.projectlombok</groupId>
                 <artifactId>lombok</artifactId>
                 <version>${lombok.version}</version>
+            </dependency>
+            <!-- excel -->
+            <dependency>
+                <groupId>org.apache.poi</groupId>
+                <artifactId>poi-ooxml</artifactId>
+                <version>${poi.version}</version>
+            </dependency>
+            <!-- excel sax -->
+            <dependency>
+                <groupId>xerces</groupId>
+                <artifactId>xercesImpl</artifactId>
+                <version>${xerces.version}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
