--- a/pom.xml
+++ b/pom.xml
@@ -29,6 +29,7 @@
         <commons-lang3.version>3.8.1</commons-lang3.version>
         <poi.version>4.0.0</poi.version>
         <xerces.version>2.12.0</xerces.version>
+        <modelmapper.version>2.3.1</modelmapper.version>
     </properties>
 
     <dependencyManagement>
@@ -80,6 +81,11 @@
                 <groupId>xerces</groupId>
                 <artifactId>xercesImpl</artifactId>
                 <version>${xerces.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.modelmapper</groupId>
+                <artifactId>modelmapper</artifactId>
+                <version>${modelmapper.version}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
