--- a/spring-boot-test/pom.xml
+++ b/spring-boot-test/pom.xml
@@ -20,6 +20,7 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <java.version>1.8</java.version>
+        <iexcel.version>0.0.2</iexcel.version>
     </properties>
 
     <dependencies>
@@ -37,6 +38,12 @@
         <dependency>
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-lang3</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>com.github.houbb</groupId>
+            <artifactId>iexcel</artifactId>
+            <version>${iexcel.version}</version>
         </dependency>
     </dependencies>
 
