--- a/spring-boot-test/pom.xml
+++ b/spring-boot-test/pom.xml
@@ -21,6 +21,7 @@
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <java.version>1.8</java.version>
         <iexcel.version>0.0.2</iexcel.version>
+        <easyexcel.version>1.1.2-beta5</easyexcel.version>
     </properties>
 
     <dependencies>
@@ -44,6 +45,12 @@
             <groupId>com.github.houbb</groupId>
             <artifactId>iexcel</artifactId>
             <version>${iexcel.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>easyexcel</artifactId>
+            <version>${easyexcel.version}</version>
         </dependency>
     </dependencies>
 
