:sparkles: 测试 WebMagic 爬取 https://blog.csdn.net/

--- a/common-test/pom.xml
+++ b/common-test/pom.xml
@@ -36,6 +36,18 @@
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
         </dependency>
+        <dependency>
+            <groupId>us.codecraft</groupId>
+            <artifactId>webmagic-core</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>us.codecraft</groupId>
+            <artifactId>webmagic-extension</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>us.codecraft</groupId>
+            <artifactId>webmagic-selenium</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
