--- a/common-test/pom.xml
+++ b/common-test/pom.xml
@@ -48,6 +48,16 @@
             <groupId>us.codecraft</groupId>
             <artifactId>webmagic-selenium</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.github.oshi</groupId>
+            <artifactId>oshi-core</artifactId>
+            <version>${oshi.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>servlet-api</artifactId>
+            <version>2.5</version>
+        </dependency>
     </dependencies>
 
 </project>
