--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,7 @@
         <xerces.version>2.12.0</xerces.version>
         <modelmapper.version>2.3.1</modelmapper.version>
         <webmagic.version>0.7.3</webmagic.version>
+        <oshi.version>3.9.1</oshi.version>
     </properties>
 
     <dependencyManagement>
@@ -102,6 +103,11 @@
                 <groupId>us.codecraft</groupId>
                 <artifactId>webmagic-selenium</artifactId>
                 <version>${webmagic.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.github.oshi</groupId>
+                <artifactId>oshi-core</artifactId>
+                <version>${oshi.version}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
