:heavy_plus_sign: Adding a disruptor dependency.

--- a/common-test/pom.xml
+++ b/common-test/pom.xml
@@ -54,6 +54,10 @@
             <version>${oshi.version}</version>
         </dependency>
         <dependency>
+            <groupId>com.lmax</groupId>
+            <artifactId>disruptor</artifactId>
+        </dependency>
+        <dependency>
             <groupId>javax.servlet</groupId>
             <artifactId>servlet-api</artifactId>
             <version>2.5</version>
