--- a/scaffold-demo-test/pom.xml
+++ b/scaffold-demo-test/pom.xml
@@ -14,41 +14,65 @@
     <name>scaffold-demo-test</name>
 
     <dependencies>
-        <!--测试 scaffold-launcher-->
-        <dependency>
-            <groupId>com.xkcoding</groupId>
-            <artifactId>scaffold-launcher</artifactId>
-        </dependency>
+      <dependency>
+        <groupId>com.xkcoding</groupId>
+        <artifactId>scaffold-launcher</artifactId>
+      </dependency>
 
-        <!--测试 scaffold-common-->
-        <dependency>
-            <groupId>com.xkcoding</groupId>
-            <artifactId>scaffold-common</artifactId>
-        </dependency>
+      <dependency>
+        <groupId>com.xkcoding</groupId>
+        <artifactId>scaffold-common</artifactId>
+      </dependency>
 
-        <!--启用 bootstrap.yml-->
-        <dependency>
-            <groupId>org.springframework.cloud</groupId>
-            <artifactId>spring-cloud-context</artifactId>
-        </dependency>
+      <dependency>
+        <groupId>com.xkcoding</groupId>
+        <artifactId>scaffold-log</artifactId>
+      </dependency>
 
-        <!--测试 scaffold-log-->
-        <dependency>
-            <groupId>com.xkcoding</groupId>
-            <artifactId>scaffold-log</artifactId>
-        </dependency>
+      <dependency>
+        <groupId>com.xkcoding</groupId>
+        <artifactId>scaffold-test</artifactId>
+      </dependency>
 
-        <!--测试 scaffold-test-->
-        <dependency>
-            <groupId>com.xkcoding</groupId>
-            <artifactId>scaffold-test</artifactId>
-        </dependency>
+      <dependency>
+        <groupId>com.xkcoding</groupId>
+        <artifactId>scaffold-swagger</artifactId>
+      </dependency>
 
-        <!--测试 scaffold-swagger-->
-        <dependency>
-            <groupId>com.xkcoding</groupId>
-            <artifactId>scaffold-swagger</artifactId>
-        </dependency>
+      <dependency>
+        <groupId>com.xkcoding</groupId>
+        <artifactId>scaffold-web</artifactId>
+      </dependency>
+
+      <dependency>
+        <groupId>com.xkcoding</groupId>
+        <artifactId>scaffold-code</artifactId>
+      </dependency>
+
+      <dependency>
+        <groupId>com.xkcoding</groupId>
+        <artifactId>scaffold-notification</artifactId>
+      </dependency>
+
+      <dependency>
+        <groupId>com.xkcoding</groupId>
+        <artifactId>scaffold-codegen</artifactId>
+      </dependency>
+
+      <dependency>
+        <groupId>mysql</groupId>
+        <artifactId>mysql-connector-java</artifactId>
+      </dependency>
+
+      <dependency>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-starter-data-redis</artifactId>
+      </dependency>
+      <!-- 对象池，使用redis时必须引入 -->
+      <dependency>
+        <groupId>org.apache.commons</groupId>
+        <artifactId>commons-pool2</artifactId>
+      </dependency>
 
     </dependencies>
 
