--- a/common-test/pom.xml
+++ b/common-test/pom.xml
@@ -10,6 +10,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>common-test</artifactId>
+    <version>${test.version}</version>
 
     <dependencies>
         <dependency>
