--- a/common-test/pom.xml
+++ b/common-test/pom.xml
@@ -13,6 +13,21 @@
     <version>${test.version}</version>
 
     <dependencies>
+        <dependency>
+            <groupId>io.github.biezhi</groupId>
+            <artifactId>excel-plus</artifactId>
+            <version>1.0.7</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.apache.poi</groupId>
+                    <artifactId>poi</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>org.apache.poi</groupId>
+                    <artifactId>poi-ooxml</artifactId>
+                </exclusion>
+            </exclusions>
+        </dependency>
         <!-- redmine -->
         <dependency>
             <groupId>com.taskadapter</groupId>
@@ -27,6 +42,10 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-logging</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.poi</groupId>
+            <artifactId>poi</artifactId>
         </dependency>
         <dependency>
             <groupId>org.apache.poi</groupId>
