--- a/pom.xml
+++ b/pom.xml
@@ -82,6 +82,11 @@
         <artifactId>lombok</artifactId>
         <version>${lombok.version}</version>
       </dependency>
+      <dependency>
+        <groupId>org.apache.poi</groupId>
+        <artifactId>poi</artifactId>
+        <version>${poi.version}</version>
+      </dependency>
       <!-- excel -->
       <dependency>
         <groupId>org.apache.poi</groupId>
