--- a/common-test/pom.xml
+++ b/common-test/pom.xml
@@ -109,6 +109,12 @@
             <artifactId>javaparser-symbol-solver-core</artifactId>
             <version>3.14.5</version>
         </dependency>
+
+        <dependency>
+            <groupId>net.dreamlu</groupId>
+            <artifactId>mica-http</artifactId>
+            <version>1.1.9</version>
+        </dependency>
     </dependencies>
 
 </project>
