--- a/common-test/pom.xml
+++ b/common-test/pom.xml
@@ -13,6 +13,13 @@
     <version>${test.version}</version>
 
     <dependencies>
+        <!--mongodb-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-mongodb</artifactId>
+            <version>2.1.8.RELEASE</version>
+        </dependency>
+
         <dependency>
             <groupId>io.github.biezhi</groupId>
             <artifactId>excel-plus</artifactId>
