--- a/common-test/pom.xml
+++ b/common-test/pom.xml
@@ -35,6 +35,12 @@
                 </exclusion>
             </exclusions>
         </dependency>
+
+        <dependency>
+            <groupId>cn.afterturn</groupId>
+            <artifactId>easypoi-base</artifactId>
+            <version>4.1.3</version>
+        </dependency>
         <!-- redmine -->
         <dependency>
             <groupId>com.taskadapter</groupId>
@@ -61,6 +67,10 @@
         <dependency>
             <groupId>xerces</groupId>
             <artifactId>xercesImpl</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.poi</groupId>
+            <artifactId>poi-ooxml-schemas</artifactId>
         </dependency>
         <dependency>
             <groupId>org.modelmapper</groupId>
