--- a/pom.xml
+++ b/pom.xml
@@ -28,7 +28,7 @@
     <hutool.version>4.5.4</hutool.version>
     <guava.version>27.0-jre</guava.version>
     <commons-lang3.version>3.8.1</commons-lang3.version>
-    <poi.version>4.0.1</poi.version>
+    <poi.version>4.1.0</poi.version>
     <xerces.version>2.12.0</xerces.version>
     <modelmapper.version>2.3.1</modelmapper.version>
     <webmagic.version>0.7.3</webmagic.version>
@@ -98,6 +98,22 @@
         <groupId>xerces</groupId>
         <artifactId>xercesImpl</artifactId>
         <version>${xerces.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.apache.poi</groupId>
+        <artifactId>poi-scratchpad</artifactId>
+        <version>${poi.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.apache.poi</groupId>
+        <artifactId>poi-ooxml-schemas</artifactId>
+        <exclusions>
+          <exclusion>
+            <groupId>xerces</groupId>
+            <artifactId>xercesImpl</artifactId>
+          </exclusion>
+        </exclusions>
+        <version>${poi.version}</version>
       </dependency>
       <dependency>
         <groupId>org.modelmapper</groupId>
