:sparkles: 测试 EasyPOI 的 html 转 excel

--- a/common-test/pom.xml
+++ b/common-test/pom.xml
@@ -132,6 +132,13 @@
             <artifactId>mica-http</artifactId>
             <version>1.1.9</version>
         </dependency>
+
+        <!-- JFinal Enjoy 模板 -->
+        <dependency>
+            <groupId>com.jfinal</groupId>
+            <artifactId>enjoy</artifactId>
+            <version>${jfinal.enjoy.version}</version>
+        </dependency>
     </dependencies>
 
 </project>
