--- a/common-test/pom.xml
+++ b/common-test/pom.xml
@@ -10,7 +10,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>common-test</artifactId>
-    <version>${test.version}</version>
+    <version>1.0-SNAPSHOT</version>
 
     <dependencies>
         <!--mongodb-->
@@ -139,6 +139,20 @@
             <artifactId>enjoy</artifactId>
             <version>${jfinal.enjoy.version}</version>
         </dependency>
+
+        <!-- docx4j -->
+        <dependency>
+            <groupId>org.docx4j</groupId>
+            <artifactId>docx4j</artifactId>
+            <version>6.1.2</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.docx4j</groupId>
+            <artifactId>docx4j-export-fo</artifactId>
+            <version>8.1.4</version>
+        </dependency>
+
     </dependencies>
 
 </project>
