--- a/scaffold-demo-test/pom.xml
+++ b/scaffold-demo-test/pom.xml
@@ -10,7 +10,7 @@
   <modelVersion>4.0.0</modelVersion>
 
   <artifactId>scaffold-demo-test</artifactId>
-  <version>${test.version}</version>
+  <version>1.0-SNAPSHOT</version>
 
   <name>scaffold-demo-test</name>
 
