--- a/spring-boot-test/pom.xml
+++ b/spring-boot-test/pom.xml
@@ -4,7 +4,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>spring-boot-test</artifactId>
-    <version>${test.version}</version>
+    <version>1.0-SNAPSHOT</version>
     <packaging>jar</packaging>
 
     <name>spring-boot-test</name>
