--- a/common-test/pom.xml
+++ b/common-test/pom.xml
@@ -161,6 +161,12 @@
       <type>pom</type>
     </dependency>
 
+    <dependency>
+      <groupId>com.vdurmont</groupId>
+      <artifactId>emoji-java</artifactId>
+      <version>5.1.1</version>
+    </dependency>
+
   </dependencies>
 
 </project>
