--- a/common-test/pom.xml
+++ b/common-test/pom.xml
@@ -167,6 +167,10 @@
       <version>5.1.1</version>
     </dependency>
 
+    <dependency>
+      <groupId>com.github.ben-manes.caffeine</groupId>
+      <artifactId>caffeine</artifactId>
+    </dependency>
   </dependencies>
 
 </project>
